[tool.poetry]
name = "type-ignore"
version = "0.1.0"
description = "Add # type: ignore [error_code] comments and remove unused # type: ignores"
authors = ["Christian Ledermann <christian.ledermann@gmail.com>"]
readme = "README.md"
packages = [{include = "type_ignore"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.0.0"
mypy = "*"

[tool.poetry.group.test.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
type-ignore = "type_ignore.main:cli"

[tool.mypy]
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
ignore_errors = false
ignore_missing_imports = false
implicit_reexport = false
strict_optional = true
strict_equality = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
warn_no_return = true
warn_return_any = true
show_error_codes = true
enable_error_code = [
    "ignore-without-code"
]
